[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://MenuChicken.tscn" type="PackedScene" id=3]
[ext_resource path="res://MenuTractor.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MenuTractor" parent="." instance=ExtResource( 10 )]

[node name="MenuChicken" parent="." instance=ExtResource( 3 )]
position = Vector2( -24, -8 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -130.0
margin_right = 301.0
margin_bottom = -42.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "It doesn't matter how fast they run. The tractor is faster..."
align = 1
autowrap = true

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 20.0
margin_right = 376.0
margin_bottom = 59.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ScoreLabelName" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 23.0
margin_bottom = 39.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="LifeLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 59.0
margin_right = 248.0
margin_bottom = 98.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="LifeLabelName" type="Label" parent="."]
margin_left = 20.0
margin_top = 59.0
margin_right = 110.0
margin_bottom = 89.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "Engine:"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.5
margin_top = -200.0
margin_right = 71.5
margin_bottom = -200.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Harvest"

[connection signal="screen_exited" from="MenuTractor" to="." method="_on_MenuTractor_screen_exited"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
